--- a/greek-conjugator/frontend/src/styles/output.css
+++ b/greek-conjugator/frontend/src/styles/output.css
@@ -492,39 +492,6 @@ video {
 [hidden]:where(:not([hidden="until-found"])) {
   display: none;
 }
-.container {
-  width: 100%;
-}
-@media (min-width: 640px) {
-
-  .container {
-    max-width: 640px;
-  }
-}
-@media (min-width: 768px) {
-
-  .container {
-    max-width: 768px;
-  }
-}
-@media (min-width: 1024px) {
-
-  .container {
-    max-width: 1024px;
-  }
-}
-@media (min-width: 1280px) {
-
-  .container {
-    max-width: 1280px;
-  }
-}
-@media (min-width: 1536px) {
-
-  .container {
-    max-width: 1536px;
-  }
-}
 .pointer-events-none {
   pointer-events: none;
 }
@@ -540,32 +507,11 @@ video {
 .inset-0 {
   inset: 0px;
 }
-.-left-10 {
-  left: -2.5rem;
-}
-.-left-5 {
-  left: -1.25rem;
-}
-.-top-10 {
-  top: -2.5rem;
-}
-.-top-6 {
-  top: -1.5rem;
-}
-.bottom-20 {
-  bottom: 5rem;
-}
-.bottom-36 {
-  bottom: 9rem;
-}
 .bottom-full {
   bottom: 100%;
 }
 .left-1\/2 {
   left: 50%;
-}
-.left-8 {
-  left: 2rem;
 }
 .right-2 {
   right: 0.5rem;
@@ -665,9 +611,6 @@ video {
 .grid {
   display: grid;
 }
-.h-1 {
-  height: 0.25rem;
-}
 .h-1\.5 {
   height: 0.375rem;
 }
@@ -692,9 +635,6 @@ video {
 .h-4 {
   height: 1rem;
 }
-.h-48 {
-  height: 12rem;
-}
 .h-5 {
   height: 1.25rem;
 }
@@ -713,12 +653,6 @@ video {
 .w-0\.5 {
   width: 0.125rem;
 }
-.w-1 {
-  width: 0.25rem;
-}
-.w-1\.5 {
-  width: 0.375rem;
-}
 .w-10 {
   width: 2.5rem;
 }
@@ -727,9 +661,6 @@ video {
 }
 .w-16 {
   width: 4rem;
-}
-.w-2 {
-  width: 0.5rem;
 }
 .w-28 {
   width: 7rem;
@@ -742,9 +673,6 @@ video {
 }
 .w-full {
   width: 100%;
-}
-.min-w-0 {
-  min-width: 0px;
 }
 .min-w-\[40px\] {
   min-width: 40px;
@@ -956,9 +884,6 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(251 191 36 / var(--tw-border-opacity, 1));
 }
-.border-amber-400\/50 {
-  border-color: rgb(251 191 36 / 0.5);
-}
 .border-amber-500\/30 {
   border-color: rgb(245 158 11 / 0.3);
 }
@@ -984,15 +909,9 @@ video {
 .border-cyan-500\/30 {
   border-color: rgb(6 182 212 / 0.3);
 }
-.border-emerald-400\/50 {
-  border-color: rgb(52 211 153 / 0.5);
-}
 .border-emerald-500 {
   --tw-border-opacity: 1;
   border-color: rgb(16 185 129 / var(--tw-border-opacity, 1));
-}
-.border-emerald-500\/30 {
-  border-color: rgb(16 185 129 / 0.3);
 }
 .border-emerald-500\/50 {
   border-color: rgb(16 185 129 / 0.5);
@@ -1041,6 +960,9 @@ video {
 }
 .border-red-500\/30 {
   border-color: rgb(239 68 68 / 0.3);
+}
+.border-red-500\/40 {
+  border-color: rgb(239 68 68 / 0.4);
 }
 .border-red-500\/50 {
   border-color: rgb(239 68 68 / 0.5);
@@ -1096,9 +1018,6 @@ video {
 .bg-amber-500\/20 {
   background-color: rgb(245 158 11 / 0.2);
 }
-.bg-amber-600\/90 {
-  background-color: rgb(217 119 6 / 0.9);
-}
 .bg-amber-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(120 53 15 / var(--tw-bg-opacity, 1));
@@ -1125,13 +1044,6 @@ video {
 .bg-cyan-500\/10 {
   background-color: rgb(6 182 212 / 0.1);
 }
-.bg-emerald-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(16 185 129 / var(--tw-bg-opacity, 1));
-}
-.bg-emerald-500\/10 {
-  background-color: rgb(16 185 129 / 0.1);
-}
 .bg-emerald-500\/20 {
   background-color: rgb(16 185 129 / 0.2);
 }
@@ -1141,9 +1053,6 @@ video {
 }
 .bg-emerald-600\/20 {
   background-color: rgb(5 150 105 / 0.2);
-}
-.bg-emerald-600\/90 {
-  background-color: rgb(5 150 105 / 0.9);
 }
 .bg-emerald-900\/50 {
   background-color: rgb(6 78 59 / 0.5);
@@ -1223,9 +1132,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity, 1));
 }
-.bg-slate-900\/80 {
-  background-color: rgb(15 23 42 / 0.8);
-}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
@@ -1243,14 +1149,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity, 1));
 }
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity, 1));
-}
-.bg-yellow-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 224 71 / var(--tw-bg-opacity, 1));
-}
 .bg-yellow-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 252 232 / var(--tw-bg-opacity, 1));
@@ -1259,17 +1157,11 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
 }
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
 .bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 .from-amber-400 {
   --tw-gradient-from: #fbbf24 var(--tw-gradient-from-position);
@@ -1279,11 +1171,6 @@ video {
 .from-amber-500 {
   --tw-gradient-from: #f59e0b var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(245 158 11 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.from-black\/20 {
-  --tw-gradient-from: rgb(0 0 0 / 0.2) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 .from-blue-500 {
@@ -1331,11 +1218,6 @@ video {
   --tw-gradient-to: rgb(30 41 59 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.from-slate-800\/80 {
-  --tw-gradient-from: rgb(30 41 59 / 0.8) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(30 41 59 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
 .from-slate-900 {
   --tw-gradient-from: #0f172a var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(15 23 42 / 0) var(--tw-gradient-to-position);
@@ -1349,10 +1231,6 @@ video {
 .via-blue-900 {
   --tw-gradient-to: rgb(30 58 138 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #1e3a8a var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-.via-transparent {
-  --tw-gradient-to: rgb(0 0 0 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), transparent var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 .to-amber-500 {
   --tw-gradient-to: #f59e0b var(--tw-gradient-to-position);
@@ -1387,20 +1265,11 @@ video {
 .to-slate-900 {
   --tw-gradient-to: #0f172a var(--tw-gradient-to-position);
 }
-.to-slate-900\/80 {
-  --tw-gradient-to: rgb(15 23 42 / 0.8) var(--tw-gradient-to-position);
-}
-.to-transparent {
-  --tw-gradient-to: transparent var(--tw-gradient-to-position);
-}
 .to-yellow-400 {
   --tw-gradient-to: #facc15 var(--tw-gradient-to-position);
 }
 .bg-clip-text {
   background-clip: text;
-}
-.object-cover {
-  object-fit: cover;
 }
 .p-1 {
   padding: 0.25rem;
@@ -1478,11 +1347,11 @@ video {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
 .pb-6 {
   padding-bottom: 1.5rem;
-}
-.pb-8 {
-  padding-bottom: 2rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1534,6 +1403,10 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .font-bold {
   font-weight: 700;
@@ -1643,6 +1516,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(192 132 252 / var(--tw-text-opacity, 1));
 }
+.text-red-200 {
+  --tw-text-opacity: 1;
+  color: rgb(254 202 202 / var(--tw-text-opacity, 1));
+}
 .text-red-400 {
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity, 1));
@@ -1718,14 +1595,17 @@ video {
   --tw-placeholder-opacity: 1;
   color: rgb(100 116 139 / var(--tw-placeholder-opacity, 1));
 }
+.accent-emerald-500 {
+  accent-color: #10b981;
+}
+.accent-cyan-300 {
+  accent-color: #67e8f9;
+}
 .opacity-0 {
   opacity: 0;
 }
 .opacity-50 {
   opacity: 0.5;
-}
-.opacity-70 {
-  opacity: 0.7;
 }
 .opacity-80 {
   opacity: 0.8;
@@ -1753,29 +1633,13 @@ video {
   --tw-shadow-color: rgb(88 28 135 / 0.3);
   --tw-shadow: var(--tw-shadow-colored);
 }
-.shadow-yellow-200\/50 {
-  --tw-shadow-color: rgb(254 240 138 / 0.5);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-yellow-300\/50 {
-  --tw-shadow-color: rgb(253 224 71 / 0.5);
-  --tw-shadow: var(--tw-shadow-colored);
-}
 .ring {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.drop-shadow-\[0_4px_8px_rgba\(0\2c 0\2c 0\2c 0\.4\)\] {
-  --tw-drop-shadow: drop-shadow(0 4px 8px rgba(0,0,0,0.4));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-.grayscale-\[30\%\] {
-  --tw-grayscale: grayscale(30%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .filter {
@@ -1804,12 +1668,6 @@ video {
 }
 .duration-500 {
   transition-duration: 500ms;
-}
-.ease-in {
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-}
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
